# mmwake

./: CMakeLists.txt  README.md  partitions_example.csv  readme.md  sdkconfig  sdkconfig.old
components/: all_config.h
components/iap/: CMakeLists.txt  esp_xmodem_common.c  esp_xmodem_receiver.c  esp_xmodem_sender.c  esp_xmodem_transport.c  xmodem_sender_example.c
components/iap/include/: esp_xmodem.h  xmodem_sender_example.h
components/iap/priv/: esp_xmodem_priv.h
components/key/: CMakeLists.txt  key.c
components/key/include/: key.h
components/led/: CMakeLists.txt  led.c
components/led/include/: led.h
components/ota/: CMakeLists.txt  simple_ota_example.c
components/ota/include/: simple_ota_example.h
components/save/: CMakeLists.txt  save.c
components/save/include/: save.h
components/serial/: CMakeLists.txt  serial.c
components/serial/include/: serial.h
components/smart_config/: CMakeLists.txt  smart_config.c
components/smart_config/include/: smart_config.h
components/tcp/: CMakeLists.txt  tcp.c
components/tcp/include/: tcp.h
components/time_world/: CMakeLists.txt  time_world.c
components/time_world/include/: time_world.h
main/: CMakeLists.txt  mmwake.c
